# gitTools

./: .flake8  .gitignore  README.md  __init__.py  __main__.py  branches.py  change.py  commitHistoryToHours.py  commits.py  diff.py  difference.py  exceptions.py  gitCommit.py  gitCommits.py  gitRecursive.py  gitRemotes.py  gitRepo.py  gitSnarf.py  gitUis.py  out.htm  pullRequests.py  pyproject.toml  tagsAndVersions.py
